Accepted IDE suggestions.